@@ -485,11 +485,10 @@ token_id id = T_UNKNOWN;
         id = T_IDENTIFIER;
         break;
 
-    case T_GENERATEDNEWLINE:      // was generated by emit_line_directive()
-        act_token.set_token_id(T_NEWLINE);
+    case T_GENERATEDNEWLINE:  // was generated by emit_line_directive()
+        act_token.set_token_id(id = T_NEWLINE);
         ++iter_ctx->emitted_lines;
         seen_newline = true;
-        id = T_NEWLINE;
         break;
         
     case T_NEWLINE:
@@ -498,9 +497,13 @@ token_id id = T_UNKNOWN;
         ++iter_ctx->emitted_lines;
         break;
 
-    case T_PP_NUMBER:
+    case T_CCOMMENT:          // will come here only if whitespace is preserved
+        iter_ctx->emitted_lines += 
+            context_policies::util::ccomment_count_newlines(act_token);
+        break;
+        
+    case T_PP_NUMBER:        // re-tokenize the pp-number
         {
-        // re-tokenize the pp-number
             token_sequence_type rescanned;
             
             std::string pp_number(act_token.get_value().c_str());
@@ -522,8 +525,7 @@ token_id id = T_UNKNOWN;
         seen_newline = true;
         break;
 
-    default:
-        // make sure whitespace at line begin keeps seen_newline status
+    default:    // make sure whitespace at line begin keeps seen_newline status
         if (IS_CATEGORY(id, WhiteSpaceTokenType))
             seen_newline = skipped_newline;
         break;
@@ -785,6 +787,7 @@ token_id id = token_id(*iter_ctx->first);
         
     } while (T_PLACEHOLDER == id);
 
+    act_pos = act_token.get_position();
     return act_token;
 }
 
